--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,11 @@ body {
 }
 
 canvas {
-	border: 1px solid black;
+	border: 1px solid #ffffff;
 	position: absolute;
 	left: 50%;
 	top: 50%;
+    background-color: rgba(0, 0, 0, .5);
 }
 
 .text-center {
